# pipeflow

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: P03-python-etl-pipeline.md  prompt.md
examples/csv_to_sqlite/: data.csv  pipeline.yaml
examples/json_transform/: data.json  pipeline.yaml
src/pipeflow/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  types.py
src/pipeflow/extractors/: __init__.py  api.py  base.py  csv_ext.py  json_ext.py
src/pipeflow/lib/: safe_eval.py  types.py
src/pipeflow/loaders/: __init__.py  base.py  csv_writer.py  sqlite.py
src/pipeflow/observability/: logger.py  metrics.py
src/pipeflow/transforms/: __init__.py  base.py  cast.py  deduplicate.py  derive.py  filter.py  rename.py
src/pipeflow/validation/: validator.py
tests/: conftest.py  test_api_extractor.py  test_benchmark.py  test_cli.py  test_config.py  test_extractors.py  test_loaders.py  test_pipeline.py  test_transforms.py  test_validation.py
